fix score calculations